--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img
-                    src="../1.jpg"
+                    src="1.jpg"
                     alt="image1"
                     class="d-block"
                     style="width: 100%; height: 600px"
@@ -87,7 +87,7 @@
                 </div>
                 <div class="carousel-item">
                     <img
-                    src="../2.jpg"
+                    src="2.jpg"
                     alt="image2"
                     class="d-block"
                     style="width: 100%; height: 600px"
@@ -95,7 +95,7 @@
                 </div>
                 <div class="carousel-item">
                     <img
-                    src="../3.jpg"
+                    src="3.jpg"
                     alt="image3"
                     class="d-block"
                     style="width: 100%; height: 600px"
@@ -103,7 +103,7 @@
                 </div>
                 <div class="carousel-item">
                     <img
-                    src="../4.jpg"
+                    src="4.jpg"
                     alt="image4"
                     class="d-block"
                     style="width: 100%; height: 600px"
@@ -111,7 +111,7 @@
                 </div>
                 <div class="carousel-item">
                     <img
-                    src="../5.jpg"
+                    src="5.jpg"
                     alt="image5"
                     class="d-block"
                     style="width: 100%; height: 600px"
