--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
             ></script>
             <title>Martial Arts</title>
     </head>
-    <body style="background-color: rgba(180, 179, 179, 0.257);">
+    <body style="background-color: rgba(182, 143, 143, 0.257);">
+        <div id="section1" class="container-fluid" style="padding: 10px">
+            <h1 class="text-danger text-center"><b>SEWA BHARATI KASHI PRANT ARAMBH SPORTS & FITNESS ACADEMY </b><hr></h1>
+        </div>
+
         <!-- your navigation bar -->
-        <nav class="navbar bg-dark navbar-dark navbar-expand-sm sticky-top">
+
+        <nav class="navbar bg-light navbar-light navbar-expand-sm ">
             <div class="container-fluid">
                 <button
                 class="navbar-toggler"
@@ -34,10 +39,10 @@
                     <a class="nav-link" href="#section1">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#section2">About Us</a>
+                    <a class="nav-link" href="#section3">About Us</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#section3">Contact Us</a>
+                    <a class="nav-link" href="#section5">Contact Us</a>
                     </li>
                 </ul>
                 </div>
@@ -140,38 +145,60 @@
             </div>
         </div>
         <hr />
-
+        <div id="section2" class="container-fluid" style="padding: 5px 10px">
+            <h2 class="text-primary text-center"><b>Defence Acadmey <hr></b></h2>
+            <div class="container">
+                <div class="row" style="padding: 5px 15px;">
+                    <div class="col-md-3 text-center">
+                        <b>Trainer 1 <hr>
+                        </b>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, quibusdam? Ipsam vero placeat dolor libero quo tenetur soluta, veritatis totam iste sint tempora omnis dolore, nam recusandae illo modi aliquam?</p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <b>Trainer 2<hr>
+                        </b>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, dolor! Quibusdam molestiae, veniam, delectus facilis expedita ad doloribus deleniti recusandae maxime molestias cumque ducimus, alias accusantium laborum magnam earum doloremque.</p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <b>Trainer 3 <hr>
+                        </b>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quis debitis porro aut repellendus asperiores molestiae molestias consequatur dolorum suscipit necessitatibus atque vitae quas voluptatum, quidem consectetur. Enim, dicta consequuntur!</p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <b>Trainer 4 <hr>
+                        </b>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse mollitia beatae temporibus hic nisi incidunt autem quos corrupti pariatur magni, aliquid laudantium non adipisci sit deserunt nam officia consequatur nulla?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- about us -->
 
-        <div id="section2" class="container-fluid" style="padding: 5px 10px">
+        <div id="section3" class="container-fluid mt-5" style="padding: 5px 10px">
             <div class="container">
                 <div class="row">
-                <div class="col-md-6 mt-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-                    facilis magni eius adipisci, aliquam assumenda ut quisquam quam
-                    tempora ab molestiae quibusdam, soluta laudantium laboriosam sequi
-                    animi rerum aspernatur. Odit. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Nemo sint, harum tempora delectus maiores ut nam
-                    aut ad quia, deleniti accusantium? Aspernatur facere asperiores
-                    ullam deserunt illo vel maiores sint! Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Odit cum assumenda, ipsam nemo
-                    praesentium fugit officia aspernatur voluptate. Fugit voluptates
-                    assumenda quo eos quas ab molestias nesciunt porro quam
-                    perspiciatis? Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Quibusdam quidem, repudiandae laboriosam fuga minus libero
-                    dolorum excepturi, recusandae, reprehenderit nisi voluptas minima
-                    fugiat sint nihil aperiam quam. Iusto, fugiat ut. Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Fugit laboriosam sequi odio
-                    maxime, quia molestias iste qui recusandae illo excepturi placeat
-                    ipsa dolores, fuga est beatae? Ducimus unde natus fugit.
+                <div class="col-md-6 mt-15">
+                    <h3 class="text-dark text-center"><b>About Our Acadmey </b><hr></h3>
+                    <p class="mt-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+                        facilis magni eius adipisci, aliquam assumenda ut quisquam quam
+                        tempora ab molestiae quibusdam, soluta laudantium laboriosam sequi
+                        animi rerum aspernatur. Odit. Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Nemo sint, harum tempora delectus maiores ut nam
+                        aut ad quia, deleniti accusantium? Aspernatur facere asperiores
+                        ullam deserunt illo vel maiores sint! Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Odit cum assumenda, ipsam nemo
+                        praesentium fugit officia aspernatur voluptate. Fugit voluptates
+                        assumenda quo eos quas ab molestias nesciunt porro quam
+                        perspiciatis? fuga est beatae? Ducimus unde natus fugit.
+                    </p>
                 </div>
 
                 <br />
 
-                <div class="col-md-6">
-                    <h2 class="social">For Enquiry :</h2>
+                <div class="col-md-6 mt-15">
+                    <h3 class="text-dark text-center"><b>For Enquiry </b><hr></h3>
                     <br />
-                    <hr />
+                    
                     <fieldset class="shadow p-4 mb-4">
                     <form>
                         <div class="row">
@@ -307,41 +334,41 @@
             </div>
         </div>
         <hr />
-
+        <div id="section4" class="container-fluid" style="padding: 5px 10px"></div>
         <!-- contact us -->
-        <div id="section3" class="container-fluid ms-3">
+        <div id="section5" class="container-fluid ms-3 bg-success text-light ">
         <footer class="footer">
             <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mt-5 ">
                 <h5>Quick Links</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                <ul class="list-unstyled ">
+                    <li><a href="#" class="text-light">Home</a></li>
+                    <li><a href="#" class="text-light">About Us</a></li>
+                    <li><a href="#" class="text-light">Services</a></li>
+                    <li><a href="#" class="text-light">Contact Us</a></li>
                 </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mt-5">
                 <h5>Contact Us</h5>
                 <p>130 Boys Hostel</p>
                 <p>MUIT, Lucknow</p>
                 <p>Email: sidd@example.com</p>
                 <p>Phone: +91 2345678900</p>
                 </div>
-                <div class="col-md-4">
-                <h5>Follow Us</h5>
-                <ul class="list-inline">
-                    <li class="list-inline-item">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                    </li>
-                </ul>
+                <div class="col-md-4 mt-5">
+                    <h5>Follow Us</h5>
+                    <ul class="list-inline">
+                        <li class="list-inline-item ">
+                        <a href="#" ><i class="fa-brands fa-facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                        <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="row">
