--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             ></script>
             <title>Martial Arts</title>
     </head>
-    <body style="background-color: rgba(182, 143, 143, 0.257);">
+    <body style="background-color: rgba(143, 176, 182, 0.257);">
         <div id="section1" class="container-fluid" style="padding: 10px">
             <h1 class="text-danger text-center"><b>SEWA BHARATI KASHI PRANT ARAMBH SPORTS & FITNESS ACADEMY </b><hr></h1>
         </div>
@@ -50,7 +50,7 @@
         </nav>
 
         <!-- your slider -->
-        <div id="section1" class="container-fluid" style="padding: 10px">
+        <div id="section1" class="container-fluid" style="padding: 0px">
             <div id="demo" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                 <button
@@ -87,7 +87,7 @@
                     src="1.jpg"
                     alt="image1"
                     class="d-block"
-                    style="width: 100%; height: 600px"
+                    style="width: 100%; height: 100%"
                     />
                 </div>
                 <div class="carousel-item">
@@ -95,7 +95,7 @@
                     src="2.jpg"
                     alt="image2"
                     class="d-block"
-                    style="width: 100%; height: 600px"
+                    style="width: 100%; height: 100%"
                     />
                 </div>
                 <div class="carousel-item">
@@ -103,7 +103,7 @@
                     src="3.jpg"
                     alt="image3"
                     class="d-block"
-                    style="width: 100%; height: 600px"
+                    style="width: 100%; height: 100%"
                     />
                 </div>
                 <div class="carousel-item">
@@ -111,7 +111,7 @@
                     src="4.jpg"
                     alt="image4"
                     class="d-block"
-                    style="width: 100%; height: 600px"
+                    style="width: 100%; height: 100%"
                     />
                 </div>
                 <div class="carousel-item">
@@ -119,7 +119,7 @@
                     src="5.jpg"
                     alt="image5"
                     class="d-block"
-                    style="width: 100%; height: 600px"
+                    style="width: 100%; height: 100%"
                     />
                 </div>
 
@@ -128,7 +128,7 @@
                     type="button"
                     data-bs-target="#demo"
                     data-bs-slide="prev"
-                    style="width: 5%; height: 600px"
+                    style="width: 5%; height: 100%"
                 >
                     <span class="carousel-control-prev-icon"></span>
                 </button>
@@ -137,7 +137,7 @@
                     type="button"
                     data-bs-target="#demo"
                     data-bs-slide="next"
-                    style="width: 5%; height: 600px"
+                    style="width: 5%; height: 100%"
                 >
                     <span class="carousel-control-next-icon"></span>
                 </button>
@@ -145,8 +145,8 @@
             </div>
         </div>
         <hr />
-        <div id="section2" class="container-fluid" style="padding: 5px 10px">
-            <h2 class="text-primary text-center"><b>Defence Acadmey <hr></b></h2>
+        <div id="section2" class="container-fluid " style="padding: 5px 10px; background-color:rgb(208, 222, 235)">
+            <h2 class="text-primary text-center"><b>Welcome To Defence Academy <hr></b></h2>
             <div class="container">
                 <div class="row" style="padding: 5px 15px;">
                     <div class="col-md-3 text-center">
@@ -174,33 +174,46 @@
         </div>
         <!-- about us -->
 
-        <div id="section3" class="container-fluid mt-5" style="padding: 5px 10px">
-            <div class="container">
-                <div class="row">
-                <div class="col-md-6 mt-15">
-                    <h3 class="text-dark text-center"><b>About Our Acadmey </b><hr></h3>
-                    <p class="mt-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-                        facilis magni eius adipisci, aliquam assumenda ut quisquam quam
-                        tempora ab molestiae quibusdam, soluta laudantium laboriosam sequi
-                        animi rerum aspernatur. Odit. Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Nemo sint, harum tempora delectus maiores ut nam
-                        aut ad quia, deleniti accusantium? Aspernatur facere asperiores
-                        ullam deserunt illo vel maiores sint! Lorem ipsum dolor sit amet
-                        consectetur adipisicing elit. Odit cum assumenda, ipsam nemo
-                        praesentium fugit officia aspernatur voluptate. Fugit voluptates
-                        assumenda quo eos quas ab molestias nesciunt porro quam
-                        perspiciatis? fuga est beatae? Ducimus unde natus fugit.
-                    </p>
-                </div>
+        <div id="section3" class="container-fluid" >
+            <!-- <div class="container"> -->
+                <div class="row" style="padding: 0px;">
+                    <div class="col-md-6 " style="background-color: rgb(199, 211, 222);" style="padding: 2px 10px">
+                        <h3 class="text-dark text-center mt-5"><b>About Our Academy </b><hr></h3>
+                        <p class="mt-5 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+                            facilis magni eius adipisci, aliquam assumenda ut quisquam quam
+                            tempora ab molestiae quibusdam, soluta laudantium laboriosam sequi
+                            animi rerum aspernatur. Odit. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Nemo sint, harum tempora delectus maiores ut nam
+                            aut ad quia, deleniti accusantium? Aspernatur facere asperiores
+                            ullam deserunt illo vel maiores sint! Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Odit cum assumenda, ipsam nemo
+                            praesentium fugit officia aspernatur voluptate. Fugit voluptates
+                            assumenda quo eos quas ab molestias nesciunt porro quam
+                            perspiciatis? fuga est beatae? Ducimus unde natus fugit.
+                        </p>
+                    </div>
+                    <br />
 
+                    <div class="col-md-6" style="padding: 0px;" >
+                        <img src="1.jpg" alt="hh" style="width:100%;height:100%">
+                    </div>
+                </div>
+        </div>
+
+        <div id="section4" class="container-fluid">
+            <!-- <div class="container"> -->
+                <div class="row">
+                <div class="col-md-6" style="padding: 0px;">
+                    <img src="2.jpg" alt="hh" style="width:100%;height:100%" >
+                </div>
                 <br />
 
-                <div class="col-md-6 mt-15">
-                    <h3 class="text-dark text-center"><b>For Enquiry </b><hr></h3>
+                <div class="col-md-6" style="background-color: rgb(192, 218, 240);">
+                    <h3 class="text-dark text-center mt-5"><b>For Enquiry </b><hr></h3>
                     <br />
                     
-                    <fieldset class="shadow p-4 mb-4">
-                    <form>
+                    <fieldset class="shadow p-4 mb-4" style="background-color: aliceblue;">
+                    <form >
                         <div class="row">
                         <div class="col-md-6">
                             <div class="form-floating mb-3 mt-3">
@@ -326,17 +339,27 @@
                             <br />
                         </div>
                         </div>
-                        <button type="submit" class="btn btn-secondary">Submit</button>
+                        <div class="col-md-12">
+                            <div class="form-floating text-center">
+                                <button type="submit" class="btn btn-secondary">Submit</button>
+                            </div>
+                        </div>
                     </form>
                     </fieldset>
                 </div>
                 </div>
             </div>
         </div>
+
         <hr />
-        <div id="section4" class="container-fluid" style="padding: 5px 10px"></div>
+
+        <div id="section5" class="container-fluid" style="padding: 0px 0px">
+            
+        </div>
+
         <!-- contact us -->
-        <div id="section5" class="container-fluid ms-3 bg-success text-light ">
+
+        <div id="section6" class="container-fluid  bg-dark text-light ">
         <footer class="footer">
             <div class="container">
             <div class="row">
